@@ -3,7 +3,7 @@
  *
  *   Mini-daemon utility definitions for the Common UNIX Printing System (CUPS).
  *
- *   Copyright 2007 by Apple Inc.
+ *   Copyright 2007-2008 by Apple Inc.
  *   Copyright 1997-2005 by Easy Software Products.
  *
  *   These coded instructions, statements, and computer programs are the
@@ -33,14 +33,18 @@
  * Prototypes...
  */
 
-extern int	cupsdCompareNames(const char *s, const char *t);
-extern void	cupsdSendIPPGroup(ipp_tag_t group_tag);
-extern void	cupsdSendIPPHeader(ipp_status_t status_code, int request_id);
-extern void	cupsdSendIPPInteger(ipp_tag_t value_tag, const char *name,
-		                    int value);
-extern void	cupsdSendIPPString(ipp_tag_t value_tag, const char *name,
-		                   const char *value);
-extern void	cupsdSendIPPTrailer(void);
+extern int		cupsdCompareNames(const char *s, const char *t);
+extern int		cupsdExec(const char *command, char **argv);
+extern cups_file_t	*cupsdPipeCommand(int *pid, const char *command,
+			                  char **argv, int user);
+extern void		cupsdSendIPPGroup(ipp_tag_t group_tag);
+extern void		cupsdSendIPPHeader(ipp_status_t status_code,
+			                   int request_id);
+extern void		cupsdSendIPPInteger(ipp_tag_t value_tag,
+			                    const char *name, int value);
+extern void		cupsdSendIPPString(ipp_tag_t value_tag,
+			                   const char *name, const char *value);
+extern void		cupsdSendIPPTrailer(void);
 
 
 #endif /* !_CUPSD_UTIL_H_ */
